@@ -439,36 +439,32 @@ describe "Utilities Module" do
   end
 
   describe "to_lf" do
-    it "should change a single CR to LF" do
+    it "converts single CR" do
       expect(Mail::Utilities.to_lf("\r")).to eq "\n"
     end
 
-    it "should change multiple LF to CRLF" do
+    it "converts multiple CR" do
       expect(Mail::Utilities.to_lf("\r\r")).to eq "\n\n"
     end
 
-    it "should change a single CRLF to LF" do
+    it "converts single CRLF" do
       expect(Mail::Utilities.to_lf("\r\n")).to eq "\n"
     end
 
-    it "should change multiple CR to LF" do
+    it "converts multiple CRLF" do
       expect(Mail::Utilities.to_lf("\r\n\r\n")).to eq "\n\n"
     end
 
-    it "should not change LF" do
-      expect(Mail::Utilities.to_lf("\n")).to eq "\n"
-    end
-
-    it "should not change multiple CRLF" do
+    it "leaves LF intact" do
       expect(Mail::Utilities.to_lf("\n\n")).to eq "\n\n"
     end
 
-    it "should handle a mix" do
+    it "converts mixed line endings" do
       expect(Mail::Utilities.to_lf("\r \n\r\n")).to eq "\n \n\n"
     end
 
     if defined?(Encoding)
-      it "should not change the encoding of the string" do
+      it "preserves encoding" do
         saved_default_internal = Encoding.default_internal
         $VERBOSE, saved_verbose = nil, $VERBOSE
         begin
@@ -482,114 +478,83 @@ describe "Utilities Module" do
       end
     end
 
-    describe "to_lf method on String" do
-      it "should leave lf as lf" do
-        expect(Mail::Utilities.to_lf("\n")).to eq "\n"
-      end
-
-      it "should clean just cr to lf" do
-        expect(Mail::Utilities.to_lf("\r")).to eq "\n"
-      end
-
-      it "should leave crlf as lf" do
-        expect(Mail::Utilities.to_lf("\r\n")).to eq "\n"
-      end
-
-      it "should handle japanese characters" do
-        string = "\343\201\202\343\201\210\343\201\206\343\201\210\343\201\212\r\n\r\n\343\201\213\343\201\215\343\201\217\343\201\221\343\201\223\r\n\r\n\343\201\225\343\201\227\343\201\244\343\201\233\343\201\235\r\n\r\n"
-        expect(Mail::Utilities.to_lf(string)).to eq "\343\201\202\343\201\210\343\201\206\343\201\210\343\201\212\n\n\343\201\213\343\201\215\343\201\217\343\201\221\343\201\223\n\n\343\201\225\343\201\227\343\201\244\343\201\233\343\201\235\n\n"
-      end
+    it "should handle japanese characters" do
+      string = "\343\201\202\343\201\210\343\201\206\343\201\210\343\201\212\r\n\r\n\343\201\213\343\201\215\343\201\217\343\201\221\343\201\223\r\n\r\n\343\201\225\343\201\227\343\201\244\343\201\233\343\201\235\r\n\r\n"
+      expect(Mail::Utilities.binary_unsafe_to_lf(string)).to eq "\343\201\202\343\201\210\343\201\206\343\201\210\343\201\212\n\n\343\201\213\343\201\215\343\201\217\343\201\221\343\201\223\n\n\343\201\225\343\201\227\343\201\244\343\201\233\343\201\235\n\n"
     end
 
-    describe "methods on NilClass" do
-      it "should return empty string on to_lf" do
+    describe "on NilClass" do
+      it "returns an empty string" do
         expect(Mail::Utilities.to_lf(nil)).to eq ''
       end
     end
 
-    describe "methods on subclass" do
-      it "should return String not subclass" do
+    describe "on String subclasses" do
+      it "returns Strings" do
         klass = Class.new(String)
         string = klass.new('')
         expect(Mail::Utilities.to_lf(string)).to be_an_instance_of(String)
       end
     end
-
   end
 
   describe "to_crlf" do
+    it "converts single LF" do
+      expect(Mail::Utilities.to_crlf("\n")).to eq "\r\n"
+    end
 
-    describe "to_crlf method on String" do
-      it "should clean just lf to crlf" do
-        expect(Mail::Utilities.to_crlf("\n")).to eq "\r\n"
-      end
+    it "converts multiple LF" do
+      expect(Mail::Utilities.to_crlf("\n\n")).to eq "\r\n\r\n"
+    end
 
-      it "should clean just cr to crlf" do
-        expect(Mail::Utilities.to_crlf("\r")).to eq "\r\n"
-      end
+    it "converts single CR" do
+      expect(Mail::Utilities.to_crlf("\r")).to eq "\r\n"
+    end
 
-      it "should leave crlf as crlf" do
-        expect(Mail::Utilities.to_crlf("\r\n")).to eq "\r\n"
-      end
+    it "preserves single CRLF" do
+      expect(Mail::Utilities.to_crlf("\r\n")).to eq "\r\n"
+    end
 
-      it "should handle japanese characters" do
-        string = "\343\201\202\343\201\210\343\201\206\343\201\210\343\201\212\r\n\r\n\343\201\213\343\201\215\343\201\217\343\201\221\343\201\223\r\n\r\n\343\201\225\343\201\227\343\201\244\343\201\233\343\201\235\r\n\r\n"
-        expect(Mail::Utilities.to_crlf(string)).to eq "\343\201\202\343\201\210\343\201\206\343\201\210\343\201\212\r\n\r\n\343\201\213\343\201\215\343\201\217\343\201\221\343\201\223\r\n\r\n\343\201\225\343\201\227\343\201\244\343\201\233\343\201\235\r\n\r\n"
-      end
+    it "preserves multiple CRLF" do
+      expect(Mail::Utilities.to_crlf("\r\n\r\n")).to eq "\r\n\r\n"
+    end
 
-      if defined?(Encoding)
-        it "should not change the encoding of the string" do
-          saved_default_internal = Encoding.default_internal
+    it "converts mixed line endings" do
+      expect(Mail::Utilities.to_crlf("\r \n\r\n")).to eq "\r\n \r\n\r\n"
+    end
+
+    it "should handle japanese characters" do
+      string = "\343\201\202\343\201\210\343\201\206\343\201\210\343\201\212\r\n\r\n\343\201\213\343\201\215\343\201\217\343\201\221\343\201\223\r\n\r\n\343\201\225\343\201\227\343\201\244\343\201\233\343\201\235\r\n\r\n"
+      expect(Mail::Utilities.binary_unsafe_to_crlf(string)).to eq "\343\201\202\343\201\210\343\201\206\343\201\210\343\201\212\r\n\r\n\343\201\213\343\201\215\343\201\217\343\201\221\343\201\223\r\n\r\n\343\201\225\343\201\227\343\201\244\343\201\233\343\201\235\r\n\r\n"
+    end
+
+    if defined?(Encoding)
+      it "preserves encoding" do
+        saved_default_internal = Encoding.default_internal
+        $VERBOSE, saved_verbose = nil, $VERBOSE
+        begin
           Encoding.default_internal = "UTF-8"
           ascii_string = "abcd".dup.force_encoding("ASCII-8BIT")
           expect(Mail::Utilities.to_crlf(ascii_string).encoding).to eq(Encoding::ASCII_8BIT)
+        ensure
           Encoding.default_internal = saved_default_internal
+          $VERBOSE = saved_verbose
         end
       end
-
     end
 
-    describe "methods on NilClass" do
-      it "should return empty string on to_crlf" do
+    describe "on NilClass" do
+      it "returns an empty string" do
         expect(Mail::Utilities.to_crlf(nil)).to eq ''
       end
     end
 
-    describe "methods on subclass" do
-      it "should return String not subclass" do
+    describe "on String subclasses" do
+      it "returns Strings" do
         klass = Class.new(String)
         string = klass.new('')
         expect(Mail::Utilities.to_crlf(string)).to be_an_instance_of(String)
       end
     end
-
-    describe "to_crlf" do
-
-      it "should change a single LF to CRLF" do
-        expect(Mail::Utilities.to_crlf("\n")).to eq "\r\n"
-      end
-
-      it "should change multiple LF to CRLF" do
-        expect(Mail::Utilities.to_crlf("\n\n")).to eq "\r\n\r\n"
-      end
-
-      it "should change a single CR to CRLF" do
-        expect(Mail::Utilities.to_crlf("\r")).to eq "\r\n"
-      end
-
-      it "should not change CRLF" do
-        expect(Mail::Utilities.to_crlf("\r\n")).to eq "\r\n"
-      end
-
-      it "should not change multiple CRLF" do
-        expect(Mail::Utilities.to_crlf("\r\n\r\n")).to eq "\r\n\r\n"
-      end
-
-      it "should handle a mix" do
-        expect(Mail::Utilities.to_crlf("\r \n\r\n")).to eq "\r\n \r\n\r\n"
-      end
-    end
-
   end
-
 end
